--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,12 +8,22 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
-    background: #E5E5E5;
+    background: #ebebeb;
 }
 
 h1, h2, h3, h4, h5, h6, p, span {
     margin: 0;
     padding: 0;
+}
+
+button {
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar {
