--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,12 @@
 @import url(./styles/global.css);
 @import url(./styles/graficos.css);
 
-.App {
-
-  /* overflow-x: hidden; */
-
-}
-
 .App-header {
 
+  align-items: center;
   background-color: #3d434e;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-between;
   padding: 10px 25px;
   position: sticky;
@@ -22,77 +16,26 @@
 
 }
 
-.App-header div {
-  
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 45%;
-
-}
-
-.App-header ul {
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 72%;
-  list-style: none;
-  padding: 0;
-  margin-right: 10px
-  
-}
-
-.App-link {
-  
-  color: #fff;
-  display: inline-block;
-  position: relative;
-
-}
-
-.App-link:after {
-
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 2px;
-    transform: scaleX(0);
-    margin-top: 10px;
-    background-color: #d0244c;
-    transition: transform 0.3s;
-
-}
-
-.App-link:hover:after {
-
-  transform: scaleX(1);
-
-}
-
-
 .App-header button {
 
-  width: 130px;
-  height: 40px;
   border-radius: 10px;
   border: none;
   background: #d0244c;
-  color: #fff;
-  font-size: 16px;
-  text-align: center;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.325);
+  color: #fff;
+  height: 40px;
+  font-size: 16px;
+  margin: 0;
+  text-align: center;
   transition: all 300ms ease-in-out;
+  width: 130px;
 
 }
 
 .App-header button:hover {
+
   background-color: #e22854;
+
 }
 
 .App-logo {
@@ -104,64 +47,65 @@
 
 .App-section {
 
+  align-items: center;
   display: flex;
   flex-direction: column;
-  padding: 25px;
   justify-content: center;
-  align-items: center;
+  margin: 0 auto;
+  padding: 25px;
+  overflow-x: hidden;
   width: 95vw;
-  margin: 0 auto
 
 }
 
-.App-div-title {
+.App-div-header {
 
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
   margin: 30px 0;
   width: 100%;
 
 }
 
-.App-div-title div h2 {
+.App-div-title h2 {
 
-  margin-bottom: 5px;
   font-weight: 700;
-  color: #d0244c
+  color: #d0244c;
+  margin-bottom: 5px;
 
 }
 
-.App-div-title div span {
+.App-div-title span {
 
+  color:#3d434e;
   font-weight: 500;
-  color:#3d434e
 
 }
 
-.App-div-title button {
+.App-div-header button {
 
-  width: 100px;
-  height: 40px;
-  border-radius: 10px;
   border: none;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.225);
   background: #d0244c;
   color: #fff;
+  height: 40px;
   font-size: 16px;
   text-align: center;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.225);
   transition: all 300ms ease-in-out;
-
+  width: 100px;
+  
 }
 
-.App-div-title button:hover {
+.App-div-header button:hover {
 
   background-color: #e22854;
 
 }
 
-.App-div-title button img {
+.App-div-header button img {
 
   margin-right: 11px
 
@@ -172,8 +116,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 30px;
   width: 100%;
-  margin-bottom: 30px
 
 }
 
@@ -185,57 +129,66 @@
 
 .App-footer {
 
-  width: 32vw;
-  text-align: center;
   margin: 0 auto;
-  margin-bottom: 25px
+  margin-bottom: 30px;
+  text-align: center;
+  width: 32vw;
 
 }
 
-.App-footer span {
+.App-footer div {
 
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: center;
 
 }
 
+.App-footer p:first-child {
+
+  font-weight: 700;
+  margin-right: 10px;
+
+}
+
 .App-footer a {
+
+  align-items: center;
   display: flex;
   margin-left: 5px;
-  align-items: center;
+
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 280px) {
+
   .App-header {
     
-    background-color: pink;
     padding: 10px;
 
   }
 
   .App-header img {
 
-    height: 5vh
+    height: 5vh;
 
   }
 
   .App-section {
 
-    padding: 10px
+    padding: 0 7px;
   
   }
 
-  .App-div-title div span {
+  .App-div-title  span {
 
-    font-size: 1rem
+    font-size: .9rem;
 
   }
 
-  .App-div-title div h2 {
+  .App-div-title h2 {
 
     font-size: 1.2rem;
-    margin-bottom: 5px
+    margin-bottom: 2px;
 
   }
 
@@ -250,39 +203,58 @@
     margin-bottom: 20px;
   
   }
+
+  .App-footer {
+
+    margin-bottom: 30px;
+    width: 82vw;
+
+  }
+
+  .App-footer div {
+
+    flex-direction: column;
+
+  }
+
+  .App-footer div p {
+
+    font-size: 0.9rem;
+
+  }
+
 }
 
-@media screen and (min-width: 481px) and (max-width: 768px) {
-  
-  .App-header {
+@media screen and (min-width: 281px) and (max-width: 480px) {
 
+  .App-header {
+    
     padding: 10px;
-    background-color: #d0244c;
 
   }
 
   .App-header img {
 
-    height: 5vh
+    height: 5vh;
 
   }
 
   .App-section {
 
-    padding: 10px
+    padding: 10px;
   
   }
 
   .App-div-title div span {
 
-    font-size: 1rem
+    font-size: 1rem;
 
   }
 
   .App-div-title div h2 {
 
     font-size: 1.2rem;
-    margin-bottom: 5px
+    margin-bottom: 5px;
 
   }
 
@@ -296,31 +268,86 @@
 
     margin-bottom: 20px;
   
+  }
+
+  .App-footer {
+
+    width: 77vw;
+    margin-bottom: 0;
+
+  }
+
+  .App-footer div {
+
+    flex-direction: column;
+
+  }
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+
+  .App-header img {
+
+    height: 7vh;
+
+  }
+
+  .App-section {
+
+    padding: 10px;
+  
+  }
+
+  .App-div-title span {
+
+    font-size: 1rem;
+
+  }
+
+  .App-div-title h2 {
+
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+
+  }
+
+  .App-div-graficos {
+    
+    flex-direction: column;
+
+  }
+
+  .App-grafico:first-child {
+
+    margin-bottom: 20px;
+  
+  }
+
+  .App-footer {
+
+    margin-bottom: 40px;
+    width: 83vw;
+
   }
 
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-  
-  .App-header {
-
-    background-color: rgb(35, 180, 6);
-
-  }
 
   .App-header img {
 
-    height: 10vh
+    height: 7vh
 
   }
 
   .App-section {
 
-    width: 80vw;
+    width: 95vw;
 
   }
 
-  .App-div-title {
+  .App-div-header {
 
     width: 100%;
 
@@ -329,8 +356,8 @@
   .App-div-graficos {
     
     flex-direction: column;
-    width: 100%;
     margin: 0 auto;
+    width: 100%;
 
   }
 
@@ -339,4 +366,12 @@
     margin-bottom: 20px;
   
   }
+
+  .App-footer {
+
+    margin: 40px auto;
+    width: 55vw;
+
+  }
+
 }
